Installed headroom, fixed form template alignment and working on positioning.

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -14,11 +14,12 @@ $opacityw4: rgba(255, 255, 255, .4);
 // mixins
 @mixin userforms() {
   color:white;
-  width:700px;
+  width:50vw;
   margin: 0 auto;
   clear:both;
   padding:50px;
   border-radius:3px;
+  line-height:20px;
   background-color: $opacityw7;
 }
 // end
@@ -49,7 +50,7 @@ nav {
   color:white;
   position: fixed;
   top:0;
-  margin-bottom:25%;
+  margin-bottom:10vh;
   width:100vw;
 
 
@@ -113,4 +114,5 @@ nav {
 
 .md-sidenav {
   height:100vh;
+  background-color:red;
 }
